0.9 Commons Refactoring